--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>Adalberto Solutions Limited: Home</title>
-  <link href="styles/main2.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
